# yolov5_ncnn

./: CMakeLists.txt  README.md
include/absl/base/: options.h
include/ncnn/: platform.h
lib/cmake/glslang/: glslang-targets.cmake
lib/cmake/ncnn/: ncnn.cmake
model/: ncnn.param
src/: dxgi-capture.cpp  dxgi-capture.h  main.cpp  main.h
